@@ -4,6 +4,8 @@ examples/ex1.pl
 examples/ex2.pl
 examples/ex3.pl
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -18,11 +20,11 @@ MANIFEST			This list of files
 META.yml
 README
 SIGNATURE
-t/Config-Dot/00-use.t
-t/Config-Dot/01-version.t
-t/Config-Dot/02-pod_coverage.t
-t/Config-Dot/03-pod.t
-t/Config-Dot/04-new.t
-t/Config-Dot/05-parse.t
-t/Config-Dot/06-reset.t
-t/Config-Dot/07-serialize.t
+t/Config-Dot/01-use.t
+t/Config-Dot/02-version.t
+t/Config-Dot/03-new.t
+t/Config-Dot/04-parse.t
+t/Config-Dot/05-reset.t
+t/Config-Dot/06-serialize.t
+xt/Config-Dot/01-pod_coverage.t
+xt/Config-Dot/02-pod.t
