@@ -6,11 +6,8 @@ build_requires:
   English: 0
   Error::Pure::Utils: 0.16
   ExtUtils::MakeMaker: 6.36
-  File::Object: 0.05
   Test::More: 0
   Test::NoWarnings: 0
-  Test::Pod: 0
-  Test::Pod::Coverage: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
@@ -26,6 +23,7 @@ no_index:
     - examples
     - inc
     - t
+    - xt
 requires:
   Class::Utils: 0.03
   Config::Utils: 0.03
