@@ -8,9 +8,14 @@ use inc::Module::Install;
 # Definition.
 abstract 'Module for simple configure file parsing.';
 author 'Michal Spacek <skim@cpan.org>';
+author_requires 'English' => 0;
+author_requires 'File::Object' => 0.05;
+author_requires 'Test::Pod' => 0;
+author_requires 'Test::Pod::Coverage' => 0;
 license 'bsd';
 name 'Config-Dot';
 readme_from 'Dot.pm';
+recursive_author_tests('xt');
 requires 'Class::Utils' => 0.03;
 requires 'Config::Utils' => 0.03;
 requires 'Error::Pure' => 0.16;
@@ -22,11 +27,8 @@ resources 'homepage' => 'https://github.com/tupinek/Config-Dot';
 resources 'repository' => 'git://github.com/tupinek/Config-Dot';
 test_requires 'English' => 0;
 test_requires 'Error::Pure::Utils' => 0.16;
-test_requires 'File::Object' => 0.05;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
-test_requires 'Test::Pod' => 0;
-test_requires 'Test::Pod::Coverage' => 0;
 tests_recursive;
 version '0.07';
 
